--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         input[type="text"]::-webkit-search-cancel-button {
         -webkit-appearance: searchfield-cancel-button;
         }
+
         button {
         padding: 24px 32px;
         white-space: nowrap;
@@ -80,7 +81,13 @@
         margin-bottom: 2em;
         }
         
-        
+        #useCurrentLocation {
+        margin-top: 0;        /* Remove default spacing above */
+        padding: 8px 16px;     /* Reduce vertical padding if needed */
+        line-height: 1.2;      /* Make line spacing tighter */
+        display: inline-block; /* Prevent stretching */
+        }
+
         /* Mobile-specific styles */
         @media (max-width: 768px) {
         .header h1 {
@@ -350,3 +357,5 @@
 
   </body>
 </html>
+
+<!-- comment added -->
