--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Taco Bell Detour</title>
+    <link rel="icon" href="https://static.wixstatic.com/media/8d9d58_c849ff6fa4ab437681051f6a098c863b~mv2.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <style>
         body {
