--- a/index.html
+++ b/index.html
@@ -251,9 +251,11 @@
             searchesRemaining--;
             if (searchesRemaining === 0) {
                 if (tacoBellResults.length === 0) {
-                alert("No Taco Bell found along the route.");
+                console.log("No Taco Bell along route. Searching farther...");
+                findNearestTacoBellAnywhere(start, end, callback);
                 return;
                 }
+
                 tacoBellResults.sort((a, b) => {
                 const distA = google.maps.geometry.spherical.computeDistanceBetween(a.geometry.location, midPoint);
                 const distB = google.maps.geometry.spherical.computeDistanceBetween(b.geometry.location, midPoint);
@@ -264,6 +266,36 @@
             });
         }
         }
+
+        function findNearestTacoBellAnywhere(start, end, callback) {
+            const boundsService = new google.maps.places.PlacesService(map);
+            const midpoint = google.maps.geometry.spherical.interpolate(
+                new google.maps.LatLng(start),
+                new google.maps.LatLng(end),
+                0.5
+            );
+
+            boundsService.nearbySearch({
+                location: midpoint,
+                radius: 50000, // 50km
+                keyword: "Taco Bell"
+            }, (results, status) => {
+                if (status === google.maps.places.PlacesServiceStatus.OK) {
+                const filtered = results.filter(place =>
+                    place.name.toLowerCase().includes("taco bell")
+                );
+
+                if (filtered.length > 0) {
+                    callback(filtered[0]);
+                } else {
+                    alert("No Taco Bells found anywhere nearby.");
+                }
+                } else {
+                alert("Failed to search for Taco Bells.");
+                }
+            });
+            }
+
 
         function routeViaTacoBell(tacoBellPlace) {
         const tacoBellLoc = tacoBellPlace.geometry.location;
