--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
             placesService.nearbySearch({
                 location: midpoint,
-                radius: 50000, // 50km
+                radius: 50000000, // 50000km
                 keyword: "Taco Bell"
             }, (results, status) => {
                 if (status === google.maps.places.PlacesServiceStatus.OK) {
