--- a/index.html
+++ b/index.html
@@ -438,7 +438,8 @@
     <p>If a Taco Bell is found, it's added as a stop along your route. You get updated directions—and a handy button to open the new path in Google Maps.</p>
 
     <p>Code available on GitHub: <a href="https://github.com/bobarke2000/taco-bell-detour" target="_blank">github.com/bobarke2000/taco-bell-detour</a></p>
-    </footer>
+    <p>This project is not affiliated with Taco Bell.</p>
+</footer>
 
   </body>
 </html>
